# learn-open-gl

./: .gitignore  .gitmodules  CMakeLists.txt  blending.cpp  camera.cpp  coordinate_systems.cpp  cubemap.cpp  depth_testing.cpp  face_culling.cpp  frame_buffer.cpp  get_started.cpp  lighting_color.cpp  main.cpp  model_loading.cpp  sprite_renderer.cpp  stencil_testing.cpp  texture.cpp  transform.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: engine.h  shader.h
shader/: fDepth.glsl  fInversion.glsl  fKernel.glsl  fLight.glsl  fLightTexture.glsl  fLightTextureDirection.glsl  fLightTextureFlashlight.glsl  fLightTexturePoint.glsl  fModel.glsl  fMultiLightTexture.glsl  fSkybox.glsl  fSprite.glsl  fStencilTesting.glsl  fTransform.glsl  fWhite.glsl  faverage.glsl  fframe_buffer.glsl  fragment.glsl  vCoordinate.glsl  vLight.glsl  vSkybox.glsl  vSprite.glsl  vTransform.glsl  vertex.glsl  vframe_buffer.glsl
src/: shader.cpp
texture/: untitled.glb
